--- a/personalBlog/index.html
+++ b/personalBlog/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta name="description" content="Udacity Responsive Images course project" />
+    <meta name="description" content="Responsive Images project" />
     <meta name="author" content="Pritesh Jakhotia">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
     <meta charset="utf-8">
